--- a/home_page/styles.css
+++ b/home_page/styles.css
@@ -42,11 +42,19 @@ table {
 	border-spacing: 0;
 }
 
-
 #revalogo{
-    padding: 2em;
+	text-align: center;
+	background-color: #ccc5b9;
+}
+#mainlogo{
+	/* background-color: ; */
+	width: 90%;
     /* align-items: center; */
     text-align: center;
+}
+
+#title{
+	padding: 10px;
 }
 
 /* #mainlogo{
@@ -70,7 +78,7 @@ h1{
 	margin-top: 3em;
 	padding: 3em;
 	text-align: center;
-	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+	
 	padding-left: 10em;
 	padding-right: 10em;
 	margin: 20px;
@@ -79,4 +87,17 @@ h1{
 
 input{
 	border-radius: 1em;
+}
+
+
+
+/* for mobile device  */
+
+
+@media  (max-width:770) {
+	#mainlogo{
+		padding: 0%;
+		width: 100%;
+		max-width: 350px;
+	}
 }
