--- a/revagradecalculator/app.css
+++ b/revagradecalculator/app.css
@@ -1,4 +1,3 @@
-
 /* Elements */
 body {
   background-color: #fdfcdc;
@@ -32,10 +31,6 @@ body {
   padding: 2%;
 }
 
-input{
-  font-size: large;
-}
-
 /* Entry */
 .entry {
   background-color: #e9ecef;
@@ -60,23 +55,17 @@ input{
 .number-form button {
   height: 40px;
   width: 30%;
-  font-size: x-large;
   margin: 2%;
   border-radius: 10px;
   border-style: none;
   padding: 0.3%;
   font-family: "Lato", sans-serif;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-/* |||  Button styles ||| */
-
-.number-form button:hover {
+.number-form-button-hover:hover {
   cursor: pointer;
-  color: white;
-  background-color: #f77f00;  
+  background-color: #f77f00;
   color: #dee2e6;
-  box-shadow: rgb(247, 127, 0) 0px 5px 15px;
 }
 
 /* Subjects */
@@ -89,6 +78,71 @@ input{
   padding: 1%;
   border-radius: 20px;
   visibility: hidden;
+}
+
+/* Subjects Sections */
+.subjectsection {
+  background-color: #e9ecef;
+  text-align: center;
+  margin-top: 1%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 1%;
+  border-radius: 20px;
+}
+
+.nextbutton {
+  height: 40px;
+  width: 30%;
+  margin: 2%;
+  border-radius: 10px;
+  border-style: none;
+  padding: 0.3%;
+  font-family: "Lato", sans-serif;
+}
+
+.iamarksinput {
+  height: 40px;
+  width: 90%;
+  margin: 2%;
+  border-radius: 10px;
+  border-style: none;
+  padding: 0.3%;
+  font-family: "Lato", sans-serif;
+  display: block;
+}
+
+.assignmentmarksinput {
+  height: 40px;
+  width: 90%;
+  margin: 2%;
+  border-radius: 10px;
+  border-style: none;
+  padding: 0.3%;
+  font-family: "Lato", sans-serif;
+  display: block;
+}
+
+.subjectheading {
+  font-size: 150%;
+  font-weight: bold;
+  font-family: "Lato", sans-serif;
+}
+
+/* Marks section */
+.marks {
+  text-align: center;
+  font-size: 120%;
+  font-weight: lighter;
+  font-family: "Lato", sans-serif;
+  padding: 3%;
+}
+
+.marks h1 {
+  font-size: 400%;
+  font-weight: bold;
+  font-family: "Lato", sans-serif;
+  text-align: center;
 }
 
 /* Id */
@@ -107,4 +161,20 @@ input{
   font-size: 120%;
   font-weight: lighter;
   font-family: "Lato", sans-serif;
+}
+
+/* Marks sections */
+#internalassignmentheading {
+  font-size: 120%;
+  font-weight: lighter;
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  padding: 5%;
+}
+
+#internalassignmentmarks {
+  font-size: 600%;
+  font-weight: bold;
+  font-family: "Lato", sans-serif;
+  text-align: center;
 }
