--- a/revagradecalculator/app.css
+++ b/revagradecalculator/app.css
@@ -14,6 +14,12 @@ body {
   text-decoration: none;
 }
 
+h1{
+  text-align: center;
+  font-size: xx-large;
+  margin-top: 20px;
+}
+
 .item a {
   font-family: "Lato", sans-serif;
   text-decoration: none;
