--- a/revagradecalculator/appmedia.css
+++ b/revagradecalculator/appmedia.css
@@ -62,4 +62,76 @@
     }
 
     
+    #entrysection.entry{
+        margin-top: 20px;
+        border-radius: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    #items-holder a{
+        font-family: 'Montserrat', sans-serif !important;
+        font-family: 'Poppins', sans-serif !important;
+    }
+
+    .items-nav{
+        font-family: 'Montserrat', sans-serif !important;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+
+    .subjectheading{
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        text-decoration: solid;
+    }
+
+    .subjectform{
+        margin: 10px;
+        align-items: center;
+        text-align: center;
+    }
+
+    .iamarksinput.iamarks{
+        margin: auto;
+    }
+
+    .assignmentmarksinput.assignmarks{
+        margin: auto;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    #singlesubjectsection.subjectsection{
+        margin-top: 20px;
+    }
+
+    #nextbutton.nextbutton.number-form-button-hover{
+        font-family: 'Montserrat', sans-serif !important;
+        font-size: medium;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    }
+
+    #nextbutton.nextbutton.number-form-button-hover:hover{
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+
+    .iamarksinput.iamarks{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    #calculatebutton.nextbutton.number-form-button-hover{
+        text-align: center;
+        font-size: medium;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+
+    #internalassignmentheading{
+        font-size: x-large;
+    }
+    
+    h4{
+        font-size: 17px;
+    }
 }
